--- a/changelog
+++ b/changelog
@@ -1,2 +1,9 @@
 + own dex
 [-] loophitbox
+[-] always on antiafk
+[-] maxzoom always 9000000
+[-] always hide iy
+[-] staffwatch
+[-] no jumpdelay
+[-] anticheatpresence (acp) disables lots of features and or replaces them with alternatives
+[-] hideindentity
