--- a/changelog
+++ b/changelog
@@ -9,4 +9,9 @@
 [-] hideindentity
 [-] covid (when within a certain distance you will automatically walk away [will adjust speed using tpwalk cframe or walkspeed if the other player starts chasing you, as well as autojump and walltp])
 [-] parkinsons disease (you will shake just slightly but shake on the x axis)
-[-]
+[-] noragdoll
+[-] backpackview esp
+[-] gambling (rolls head tails, dice, number to number, etc)
+[-] crosshair
+[-] down noclip
+[-] 
