--- a/changelog
+++ b/changelog
@@ -14,4 +14,18 @@
 [-] gambling (rolls head tails, dice, number to number, etc)
 [-] crosshair
 [-] down noclip
-[-] 
+[-] partviewer (tool that shows you what part it is and with folder and path)
+[-] currentposition
+[-] teamchanger
+[-] gpublewup (freeze game)
+[-] join games I play normally like arsenal idk 
+[-] nccam (noclipcam on by default) my prefrence ofc
+[-] gui to chat with friends only and see when they leave join and log everything they do (yes this is creepy)
+[-] tpbheindwall (tp someone but behind the nearest wall to them so if u wanna like shoot them u can peek them
+[-] walk upside down
+[-] skeletonesp
+[-] smarthbe but working
+[-] dadrbx (will chat saying "my dad owns roblox and he will ban you")
+[-] log shit to ur discord like chat etc 
+[-] disable full chat and/or vc so u dont got random niggas gargling down your throat when you fuck them 17 inches deep
+[-]
