--- a/changelog
+++ b/changelog
@@ -28,4 +28,5 @@
 [-] dadrbx (will chat saying "my dad owns roblox and he will ban you")
 [-] log shit to ur discord like chat etc 
 [-] disable full chat and/or vc so u dont got random niggas gargling down your throat when you fuck them 17 inches deep
-[-]
+[-] walkspeed gravity velocity shower etc metrics
+[-] 
