--- a/changelog
+++ b/changelog
@@ -29,4 +29,5 @@
 [-] log shit to ur discord like chat etc 
 [-] disable full chat and/or vc so u dont got random niggas gargling down your throat when you fuck them 17 inches deep
 [-] walkspeed gravity velocity shower etc metrics
+[-] e [emote] cause some games dont support and i can add custom own ones like backflip
 [-] 
